--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "tailwindcss": "^3.4.13",
         "vite": "^5.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "toastr": "^2.1.4"
     }
 }
